# NYS

./: CMakeLists.txt  NYSinterface.c  NYSinterface.h  main.c
file-handling/: read.c  read.h
object-and-scene/: Figure.c  Figure.h  Object.c  Object.h  Scene.c  Scene.h  SceneManager.c  SceneManager.h  graphics.c  graphics.h
structures/: macros.h
structures/graphs/: Tree.c  Tree.h
structures/lists/: LinkedList.c  LinkedList.h
structures/stacks/: Stack.c  Stack.h
